# linberry

./: CreaPaquete.sh  CreaPaqueteArepa.sh  DateFieldKSW.rbo  README  TurboReport.rbw  campos de Address Book  dependencias  fpdf.rbo  linberryB.rbp  linberrydata  zlib.rbo
Blackberry modem/: bbtether-0.3m.tgz
Blackberry modem/bbtether/: LinBConect.py  LinBEscanear.py  LinBReiniciarBB.py  LinB_Conect.py~  LinB_EscanearMod.py  LinB_EscanearMod_backup.py  bb_data.py  bb_data.py~  bb_gui.py  bb_modem.py  bb_osx.py  bb_prefs.py  bb_proxy.py  bb_tether.py  bb_usb.py~  bb_util.py  bbbackup.py  bbbackup.py~  bbtether.py  berry4all.sh  compila3prg.sh
linberry_1.1b2_i386/DEBIAN/: control  control~  postinst  postinst~
linberrylibs/: ChangeLog  DEPUTY  Doxyfile  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  buildgen.sh  config.h  config.h.in  config.status  configure  configure.ac  liblinberry-0.pc  liblinberry-0.pc.in  liblinberrydp-0.pc  liblinberrydp-0.pc.in  liblinberryjdwp-0.pc  liblinberryjdwp-0.pc.in  libtool
linberrylibs/.libs/: lt-addcontact
linberrylibs/autom4te.cache/: output.1  requests  traces.0  traces.1
linberrylibs/opensync-plugin/src/: Makefile.am  Makefile.in  environment.cc  environment.h  idmap.h  linberry-sync  linberry_sync.cc  trace.h  vbase.h  vcard.cc  vcard.h  vevent.cc  vevent.h
telefonos/: DeviceCharacteristics.xml
traducciones lingua/: linberry2aleman.rbl  linberry2aleman~.rbl  linberry2frances.rbl  linberry2ingles.rbl  linberry2italiano.rbl  linberry2italiano~.rbl  linberry2protugues.rbl  linberry2protugues~.rbl
(+1156 files in other folders)
